# kybra-dataframes

./: README.md  dfx.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/kybra_hello_world/: constructor.did  constructor.old.did  index.js  service.did  service.did.d.ts  service.did.js
.kybra/kybra_hello_world/: Cargo.toml  py_file_names.csv
.kybra/kybra_hello_world/python_source/: dataframe.py  other_stuff.py
.kybra/kybra_hello_world/python_source/pambdas/: __init__.py  indexers.py
.kybra/kybra_hello_world/src/: lib.rs
src/: main.py
